pridnie ukladanie userov do databazy

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-    <div class="header" id="domov">
+    <div class="header">
         <div class="logo">
             <a href="/">🍽️ Moje Recepty</a>
         </div>
         <nav>
             <ul>
-                <li><a href=#domov">Domov</a></li>
+                <li><a href="">Domov</a></li>
                 <li><a href="#recepty">Recepty</a></li>
                 <li><a href="">O nás</a></li>
                 <li><a href="">Kontakt</a></li>
