vytvorenie stranky pre samostatny Login a samostatnu Registraciu

--- a/public/login.html
+++ b/public/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
-    <title>Login/Registration Recepty</title>
+    <title>Login Recepty</title>
 </head>
 <body>
     <div class="container">
@@ -21,18 +21,7 @@
             </form>
         </div>
 
-        <div class="form-container">
-            <h2>Registrácia</h2>
-            <form id="registration-form">
-                <label for="register-name">Meno:</label>
-                <input type="text" id="register-name" required>
-                
-                <label for="register-password">Heslo:</label>
-                <input type="password" id="register-password" required>
-                
-                <button type="submit">Zaregistrovať sa</button>
-            </form>
-        </div>
+        <p>Nemáte účet? <a href="register.html">Registrujte sa</a></p>
     </div>
 
     <script src="login.js" defer></script>
