uprava Login a Registration page, pridanie prepinanie medzi nimi

--- a/public/login.html
+++ b/public/login.html
@@ -21,7 +21,7 @@
             </form>
         </div>
 
-        <p>Nemáte účet? <a href="register.html">Registrujte sa</a></p>
+        <p>Nemáte účet? <a href="registracia.html">Registrujte sa</a></p>
     </div>
 
     <script src="login.js" defer></script>
