--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
             <input type="text" name="q" placeholder="Hľadať recept...">
             <button type="submit">🔍</button>
         </form> 
+        <div class="logout">
+            <p>User: <span id="logged-in-user">Hosť</span></p>
+            <button id="logout-btn" class="logout-btn">Odhlásiť sa</button>
+        </div>
 
     </div>
 
