pridanie emailu do registracie a ulozenia do databazy

--- a/public/registracia.html
+++ b/public/registracia.html
@@ -13,6 +13,9 @@
             <form id="registration-form">
                 <label for="register-name">Meno:</label>
                 <input type="text" id="register-name" required>
+
+                <label for="register-password">E-mail:</label>
+                <input type="email" id="register-email" required>
                     
                 <label for="register-password">Heslo:</label>
                 <input type="password" id="register-password" required>
