zmeny v registration.html

--- a/public/registracia.html
+++ b/public/registracia.html
@@ -21,6 +21,8 @@
                 <input type="password" id="register-password" required>
                     
                 <button type="submit">Zaregistrovať sa</button>
+
+                <button type="submit">Spet na Login</button>
             </form>
         </div>
 
