dokoncenie authorizacie uzivatela, vytvorenie tokenu/ulozenie tokenu/ nacitanivsetkych userov na zaklade toho tokenu, vytvorenie Popisu projektu pre authorizaciu uzivatela

--- a/public/registracia.html
+++ b/public/registracia.html
@@ -22,7 +22,7 @@
                     
                 <button type="submit">Zaregistrovať sa</button>
 
-                <button type="submit">Spet na Login</button>
+                <button type="button">Spet na Login</button>
             </form>
         </div>
 
