upravy formulara na pridanie receptu zo stranky

--- a/public/index.html
+++ b/public/index.html
@@ -141,6 +141,14 @@
                                 <input type="checkbox" name="ingredients" value="ovocie"> 
                                 <span>Ovocie</span>
                             </label>
+                            <label class="ingredMoznosti">
+                                <input type="checkbox" name="ingredients" value="jogurt"> 
+                                <span>Jogurt</span>
+                            </label>
+                            <label class="ingredMoznosti">
+                                <input type="checkbox" name="ingredients" value="piskoty"> 
+                                <span>Piskoty</span>
+                            </label>
                         </div>                       
                     </div>
 
