--- a/public/index.html
+++ b/public/index.html
@@ -118,6 +118,14 @@
                                 <span>Olej</span>
                             </label>
                             <label class="ingredMoznosti">
+                                <input type="checkbox" name="ingredients" value="maslo">
+                                <span>Maslo</span>
+                            </label>
+                            <label class="ingredMoznosti">
+                                <input type="checkbox" name="ingredients" value="ryza">
+                                <span>Ryza</span>
+                            </label>
+                            <label class="ingredMoznosti">
                                 <input type="checkbox" name="ingredients" value="cukor">
                                 <span>Cukor</span>
                             </label>
@@ -132,6 +140,10 @@
                             <label class="ingredMoznosti">
                                 <input type="checkbox" name="ingredients" value="korenie">
                                 <span>Korenie</span>
+                            </label>
+                            <label class="ingredMoznosti">
+                                <input type="checkbox" name="ingredients" value="granko">
+                                <span>Granko</span>
                             </label>
                             <label class="ingredMoznosti">
                                 <input type="checkbox" name="ingredients" value="zelenina"> 
