pridanie cypress suborov

--- a/public/login.html
+++ b/public/login.html
@@ -12,12 +12,12 @@
             <h2>Prihlásenie</h2>
             <form id="login-form">
                 <label for="login-name">Meno</label>
-                <input type="text" id="login-name" required>
+                <input type="text" id="login-name" data-cy="login-name" required>
                 
                 <label for="login-password">Heslo:</label>
-                <input type="password" id="login-password" required>
+                <input type="password" id="login-password" data-cy="login-password" required>
                 
-                <button type="submit">Prihlásiť sa</button>
+                <button type="submit" data-cy="login-submit">Prihlásiť sa</button>
             </form>
         </div>
 
