--- a/public/registracia.html
+++ b/public/registracia.html
@@ -12,15 +12,15 @@
             <h2>Registrácia</h2>
             <form id="registration-form">
                 <label for="register-name">Meno:</label>
-                <input type="text" id="register-name" required>
+                <input type="text" id="register-name" data-cy="register-name" required>
 
                 <label for="register-password">E-mail:</label>
-                <input type="email" id="register-email" required>
+                <input type="email" id="register-email" data-cy="register-email" required>
                     
                 <label for="register-password">Heslo:</label>
-                <input type="password" id="register-password" required>
+                <input type="password" id="register-password" data-cy="register-password" required>
                     
-                <button type="submit">Zaregistrovať sa</button>
+                <button type="submit" data-cy="registration-submit">Zaregistrovať sa</button>
             </form>
         </div>
 
